--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ html {
 .divbox {
 	align:center;
 	width:70%;
-	border: 3px;
+	border: 3px outset black;
 	padding:5px;
-	margin: 5px;
+	margin: 160px;
 }
 
 .p {
